# chocomint

./: Cargo.toml  MVP  README.md  TODO  index.html
coverage/home/runner/work/fusion/fusion/crates/cargo-fusion/src/: main.rs.html
coverage/home/runner/work/fusion/fusion/crates/compositor/src/: main.rs.html  session.rs.html
coverage/home/runner/work/fusion/fusion/crates/compositor/src/compositor/: cursor.rs.html  input.rs.html  mapped.rs.html  mod.rs.html  output.rs.html  state.rs.html  udev.rs.html  window.rs.html
coverage/home/runner/work/fusion/fusion/crates/compositor/src/compositor/api/: general.rs.html  mod.rs.html
coverage/home/runner/work/fusion/fusion/crates/compositor/src/compositor/grabs/: move_grab.rs.html  resize_grab.rs.html
coverage/home/runner/work/fusion/fusion/crates/fusionctl/src/: main.rs.html
coverage/home/runner/work/fusion/fusion/crates/graphics-derive/src/: lib.rs.html
coverage/home/runner/work/fusion/fusion/crates/graphics-widgets/src/: button.rs.html  image.rs.html  lib.rs.html  row.rs.html  slider.rs.html  text.rs.html
coverage/home/runner/work/fusion/fusion/crates/graphics/src/: graphics.rs.html  lib.rs.html  widget.rs.html  window.rs.html
coverage/home/runner/work/fusion/fusion/crates/graphics/src/content/: mod.rs.html  svg.rs.html
coverage/home/runner/work/fusion/fusion/crates/graphics/src/rendering/: bind_group.rs.html  bind_group_layout.rs.html  commands.rs.html  gpu.rs.html  instance.rs.html  material.rs.html  mesh.rs.html  mod.rs.html  text.rs.html  vertex.rs.html
coverage/home/runner/work/fusion/fusion/crates/graphics/src/types/: border.rs.html  bounds.rs.html  color.rs.html  corners.rs.html  paint.rs.html  stroke.rs.html  texture.rs.html
coverage/home/runner/work/fusion/fusion/crates/graphics/src/types/styling/: background.rs.html  themes.rs.html
coverage/home/runner/work/fusion/fusion/crates/plugin-engine/src/: context.rs.html  engine.rs.html  env.rs.html  general.rs.html  lib.rs.html  loader.rs.html  manifest.rs.html  table.rs.html
coverage/home/runner/work/fusion/fusion/crates/plugin-engine/src/config/: mod.rs.html  section.rs.html  section_option.rs.html  value.rs.html  value_type.rs.html
coverage/home/runner/work/fusion/fusion/crates/wl_client/src/: lib.rs.html
coverage/home/runner/work/fusion/fusion/crates/wl_client/src/window/: mod.rs.html  pool.rs.html  transform.rs.html
crates/compositor/: Cargo.toml
crates/compositor/src/: main.rs  session.rs
crates/compositor/src/compositor/: cursor.rs  input.rs  mapped.rs  mod.rs  output.rs  state.rs  udev.rs  window.rs
crates/compositor/src/compositor/api/: general.rs  mod.rs
crates/compositor/src/compositor/grabs/: resize_grab.rs
crates/graphics/src/types/: color.rs
examples/window_manager/src/: fusion.rs
specs/compositor/: window.wit
