[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/compositor",
    "crates/fusionctl",
    "crates/fusion-socket-protocol",

    "crates/plugin-engine",
    "crates/cargo-fusion",

    "crates/wl_client",
    "crates/graphics",
    "crates/graphics-derive",
    "crates/graphics-widgets",


    "examples/*",

    # Plugin engine tests
    "crates/plugin-engine/tests/plugins/*",
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
### [Crates]
plugin-engine = { path = "crates/plugin-engine" }
fusion-socket-protocol = { path = "crates/fusion-socket-protocol" }
graphics = { path = "crates/graphics" }
graphics-derive = { path = "crates/graphics-derive" }
graphics-widgets = { path = "crates/graphics-widgets" }
wl_client = { path = "crates/wl_client" }

### [Error]
thiserror = "2.0.18"
anyhow = "1.0.101"

### [Debug]
tracing = "0.1.44"
log = "0.4.29"
env_logger = "0.11.8"
tracy-client = { version = "0.18.4", features = ["enable"] }

### [Plugins]
wasmtime = { version = "41.0.3", features = ["async"] }
wasmtime-wasi = { version = "41.0.3" }
wit-bindgen = "0.52.0"

### [Filesystem]
notify = "8.2.0"
dirs = "6.0.0"
walkdir = "2.5.0"
tempfile = "3.24.0"

### [Utils]
regex = "1.12.3"
bitflags = "2.10.0"
chrono = { version = "0.4.43" }
bytemuck = { version = "1.25.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from", "display"] }
slotmap = "1.1.1"
lazy_static = "1.5.0"
enum_dispatch = "0.3.13"

### [Serialization]
zip = "7.4.0"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }

### [TUI]
clap = { version = "4.5.57", features = ["derive"] }
comfy-table = "7.2.2"

### [Other]
tree-sitter = "0.26.5"

### [Build]
cc = "1.2.55"

### [Macros]
syn = "2.0.114"
quote = "1.0.44"
proc-macro2 = "1.0.106"

### [Cargo metadata]
cargo_metadata = "0.23.1"
cargo-manifest = "0.20.0"

### [Wayland]
wgpu = "28.0.0"
xcursor = "0.3.10"
smithay = { version = "0.7.0", features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "desktop",
    "renderer_gl",
    "renderer_pixman",
    "renderer_multi",
    "use_system_lib",
    "wayland_frontend",
] }
smithay-drm-extras = "0.1.0"
wayland-server = "0.31.11"
winit = "0.30.12"
calloop = { version = "0.14.3", features = ["executor"] }
drm = "0.14.1"

# Client
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["wayland-server"] }
wayland-backend = { version = "0.3.12", features = ["client_system", "rwh_06"] }
memmap2 = "0.9.9"
rayon = "1.11.0"
glam = { version = "0.31.0", features = ["bytemuck"] }
fontdue = { version = "0.9.3", features = ["simd", "parallel"] }
guillotiere = "0.6.2"
pollster = "0.4.0"
rand = "0.9.2"
image = "0.25.9"
resvg = "0.46.0"
