[package]
name = "compositor"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-tracy = "0.11.4"

fusion-socket-protocol.workspace = true
plugin-engine.workspace = true
toml.workspace = true
thiserror.workspace = true
serde.workspace = true
zip.workspace = true
notify.workspace = true
dirs.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
derive_more.workspace = true
clap.workspace = true

#Compositor
smithay.workspace = true
smithay-drm-extras.workspace = true
wayland-server.workspace = true
winit.workspace = true
calloop.workspace = true
drm.workspace = true
xcursor.workspace = true

wasmtime.workspace = true
slotmap.workspace = true

postcard.workspace = true

[build-dependencies]
cc.workspace = true
